# random-forest-fxai

./: Makefile  README.md
coq/: CNF.v  DT.v  DTGenVectors.v  DTXp.v  Encoding.v  EncodingCategorical.v  Enum.v  Explainer.v  Explainers.v  Extract.v  Features.v  FloatUtils.v  InputData.v  RF.v  Sat.v  Utils.v  Voting.v  Xp.v  _CoqProject
ocaml/: dune-project  rfxp.opam  test_input_file.txt
ocaml/dttxt/: README.txt  dune  lexer.mll  output.txt  output2.txt  output3.txt  parse_file.ml  parser.mly  parsing_utils.ml
ocaml/lib/: Ascii.ml  Ascii.mli  BinInt.ml  BinInt.mli  BinNat.ml  BinNat.mli  BinPos.ml  BinPos.mli  Convert_data.ml  DT.ml  DT.mli  Datatypes.ml  Datatypes.mli  Decimal.ml  Decimal.mli  Driver.ml  Driver.mli  Driver_file.ml  Enum.ml  Enum.mli  Equalities.ml  Explainer.ml  Explainer.mli  FMapInterface.ml  FMapList.ml  FMapList.mli  Features.ml  Features.mli  Hexadecimal.mli  InputData.mli  List0.ml  List0.mli  MSetInterface.mli  Number.mli  OrderedType.ml  OrderedType.mli  Orders.ml  Orders.mli  PrimFloat.ml  PrimFloat.mli  (+13 more)
ocaml/lib/extracted/: BinNat.ml  BinNat.mli  DT.ml  DT.mli  DTGenVectors.ml  DTGenVectors.mli  DTXp.ml  DTXp.mli  Datatypes.ml  Explainers.ml  Explainers.mli  Features.ml  Features.mli  FloatUtils.ml  FloatUtils.mli  Hexadecimal.ml  MSetInterface.ml  MSetList.ml  MSetList.mli  Orders.mli  OrdersEx.ml  OrdersEx.mli  PeanoNat.ml  PeanoNat.mli  PrimFloat.ml  PrimFloat.mli  RF.ml  RF.mli  Specif.ml  Specif.mli  Utils.ml  Utils.mli  Voting.mli  Xp.ml  Xp.mli
ocaml/lib/import/: dune  lexer.mll  parse_file.ml
(+11 files in other folders)
